# jimini-normalizer

./: .gitignore  .sops.yaml  Cargo.nix  Cargo.toml  Dockerfile  README.md  TESTING.md  compose.yaml  deploy.yaml  flake.nix  migration-manifest.yaml
chart/jimini-normalizer/: Chart.yaml  values.yaml
chart/jimini-normalizer/dashboards/: overview.json
chart/jimini-normalizer/templates/: cronjob-audit.yaml  cronjob-retention.yaml  deployment-worker.yaml  grafana-dashboards.yaml  prometheusrule.yaml  service-worker.yaml  servicemonitor-worker.yaml
chart/jimini-normalizer/templates/tests/: test-api-endpoints.yaml  test-api-health.yaml  test-api-metrics.yaml  test-connectivity.yaml  test-worker-metrics.yaml
deploy/: normalizer.yaml
deploy/flux/: helmrelease.yaml  kustomization.yaml  namespace.yaml
deploy/grafana/: dashboard-configmap.yaml  dashboard.json
deploy/production/: kustomization.yaml  values.yaml
deploy/staging/: kustomization.yaml  values.yaml
fixtures/: provider_a.json  provider_b.json  provider_c.csv  test-config.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20260303_000001_initial_schema.rs  m20260304_000001_idempotency.rs  m20260305_000001_dynamic_config.rs  m20260306_000001_outbox_assessment_unique.rs  m20260307_000001_schema_violation_idempotent.rs
src/: audit.rs  audit_checker.rs  buffer.rs  config.rs  db.rs  dynamic_config.rs  envelope.rs  error.rs  failed.rs  lib.rs  main.rs  nats.rs  observability.rs  outbox.rs  pii.rs  pipeline.rs  retention.rs  router.rs  run_mode.rs  schema.rs  state.rs  worker.rs
src/entity/: assessment.rs  dynamic_config.rs  failed_record.rs  mod.rs  normalization_audit_log.rs  outbox.rs  schema_violation.rs
src/handler/: admin_config.rs  assessments.rs  audit.rs  failed_records.rs  health.rs  mod.rs  normalize.rs  retention.rs
src/model/: mod.rs  provider_a.rs  provider_b.rs  provider_c.rs  unified.rs
src/provider/: mod.rs  provider_a.rs  provider_b.rs  provider_c.rs  schema.rs
src/sink/: http_json.rs  mod.rs  postgres.rs  stdout.rs
tests/: api_integration_test.rs  compliance_test.rs  compose_integration_test.sh  delivery_pipeline_test.rs  dynamic_config_test.rs  envelope_test.rs  pipeline_test.rs  provider_adapter_test.rs  sink_test.rs
tests/common/: mod.rs
