[package]
name = "jimini-normalizer"
version = "0.1.0"
edition = "2021"
description = "Multi-Provider Data Normalization Service"

[lib]
name = "jimini_normalizer"
path = "src/lib.rs"

[[bin]]
name = "jimini-normalizer"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
thiserror = "2"
pleme-observability = { version = "0.3", features = ["full"] }
prometheus = { version = "0.13", default-features = false }

[dev-dependencies]
axum-test = "16"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
