[workspace]
members = [".", "migration"]

[package]
name = "jimini-normalizer"
version = "0.1.0"
edition = "2021"
description = "Multi-Provider Data Normalization Service"

[lib]
name = "jimini_normalizer"
path = "src/lib.rs"

[[bin]]
name = "jimini-normalizer"
path = "src/main.rs"

[[bin]]
name = "config-admin"
path = "src/bin/config_admin.rs"

[[bin]]
name = "db-bootstrap"
path = "src/bin/db_bootstrap.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
pleme-observability = { version = "0.3", features = ["full"] }
prometheus = { version = "0.13", default-features = false }
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
sha2 = "0.10"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["yaml", "env"] }
async-nats = "0.38"
arc-swap = "1"
async-trait = "0.1"
futures = "0.3"
migration = { path = "migration" }

[dev-dependencies]
axum-test = "16"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "nats"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
